# pybind11_ML_model

./: .gitignore  CMakeLists.txt
sparrow/_lib/src/LinearModel/: CMakeLists.txt
sparrow/_lib/src/OtherModule/: CMakeLists.txt
sparrow/test/: Test_Linear_Model.py
